Small changes to analysis

--- a/Carter_pymaceuticals.ipynb
+++ b/Carter_pymaceuticals.ipynb
@@ -19,11 +19,11 @@
    "source": [
     "# Here are three observations after considering the data: \n",
     "\n",
-    "# There is a strong correlation between mouse weight and final tumor volume at final timepoint \n",
+    "# There is a strong correlation between mouse weight and final tumor volume at final timepoint. \n",
     "\n",
-    "# Capomulin and Ramicane have the lower tumor volumes at final timepoint \n",
+    "# Capomulin and Ramicane have the lower tumor volumes at final timepoint. \n",
     "\n",
-    "# Slightly more male mice were used in the study"
+    "# Slightly more male mice were used in the study."
    ]
   },
   {
